# Self-Healing-Code-Agent

./: .env.example  .gitignore  Dockerfile.sandbox  README.md  pyproject.toml  roi_report.json
example/: calculator.py  test_calculator.py
example/go_backend/: counter.go  counter_test.go  go.mod
example/go_market_aggregator/: aggregator.go  aggregator_test.go  go.mod
self_healing_agent/: __init__.py  agent.py  cli.py  controller.py  model.py  sandbox.py  telemetry.py  view.py
tests/: test_agent.py
