[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "self-healing-code-agent"
version = "0.1.0"
description = "A CLI that repairs failing Python code from test output using OpenAI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
self-heal = "self_healing_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["self_healing_agent*"]
